# YZTA-Hackathon-Team-281

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  logging.py  main.py
app/agents/: customer_support.py  deps.py  proactive_jobs.py  router.py
app/api/: demo.py  health.py  webhook.py
app/llm/: provider.py
app/models/: domain.py  tables.py
app/notifications/: dedup.py
app/security/: pii.py
app/seed/: fixtures.py
app/tools/: email.py  messaging.py  orders.py  shipments.py  stock.py
docs/: ai-approach.md  architecture.md
scripts/: init_db.sql  set_webhook.sh
tests/smoke/: test_briefing.py  test_integration.py  test_pii.py  test_tools.py
