[project]
name = "kobiops"
version = "0.1.0"
description = "AI Destekli KOBİ Operasyon Otomasyonu — Faz 0 / Hackathon MVP"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # AI agent framework
    "pydantic-ai==1.93.*",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",

    # Telegram bot
    "python-telegram-bot>=21.0",

    # Config & settings
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",

    # Observability (opsiyonel — LOGFIRE_TOKEN set ise aktif)
    "logfire[fastapi]>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",   # FastAPI test client
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
